tests/ui/lifetimes/lifetime-errors/ex1-return-one-existing-name-if-else-3.stderr
error[E0621]: explicit lifetime required in parameter type
  --> $DIR/ex1-return-one-existing-name-if-else-3.rs:2:27
   |
LL | fn foo<'a>((x, y): (&'a i32, &i32)) -> &'a i32 {
   |                    --------------- help: add explicit lifetime `'a` to type: `(&'a i32, &'a i32)`
LL |     if x > y { x } else { y }
   |                           ^ lifetime `'a` required

error: aborting due to previous error

For more information about this error, try `rustc --explain E0621`.
